--- a/app/src/main/res/layout/activity_parcel.xml
+++ b/app/src/main/res/layout/activity_parcel.xml
@@ -1,7 +1,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/parcel_coord_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="me.jrdh.parcel.ParcelActivity">
